syntax = "proto3";
package tests.kitchensink;

import "validate/validate.proto";

message OneOf {

    oneof none {
        string string  = 1 [(validate.rules).string.min_len = 5];
        Embed msg_none = 2;
    }

    oneof required {
        option (validate.required) = true;

        bytes bytes   = 3;
        Embed msg_req = 4 [(validate.rules).message.required = true];
        Enum  enum    = 5 [(validate.rules).enum.defined_only = true];
    }

    message Embed {}
    enum Enum { DEFAULT = 0; }
}
